Prevent filtering visibility affecting rule visibility

--- a/Survey/source/styles/_o-option-list.scss
+++ b/Survey/source/styles/_o-option-list.scss
@@ -1,5 +1,10 @@
 @use 'globals';
 
+.hidden-filter,
+.hidden-rule {
+    display: none !important;
+}
+
 /* Sublist heading */
 .o-option-sublist .a-label-heading-sublist {
     font-family: 'Merriweather', serif;
